# handmadeAPI

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements
cart/: models.py  serializer.py  views.py
cart/migrations/: 0001_initial.py
category/: models.py  serializer.py  tests.py  views.py
category/migrations/: 0001_initial.py  0002_category_img.py  0002_category_tags.py  0003_remove_category_tags.py
chat/: admin.py  consumers.py  models.py  routing.py  serializer.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20200514_1303.py  0003_auto_20200514_1305.py
chatApp/: admin.py  models.py  serializer.py  views.py
chatApp/migrations/: 0001_initial.py
comment/: models.py  serializer.py  views.py
comment/migrations/: 0001_initial.py
core/: permissions.py  test_utils.py  views.py
favourites/: admin.py  models.py  serializer.py  views.py
favourites/migrations/: 0001_initial.py
handmade/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
item/: admin.py  models.py  serializer.py  tests.py  views.py
item/migrations/: 0001_initial.py  0002_auto_20200418_1153.py  0002_auto_20200928_1717.py  0002_remove_item_price.py  0003_auto_20200418_1622.py  0003_auto_20200928_1719.py  0004_auto_20200420_1352.py  0004_auto_20200928_1854.py  (+30 more)
offer/: admin.py  models.py  permissions.py  serializer.py  views.py
post/: models.py  serializers.py  tests.py  views.py
tag/: models.py  serializer.py  tests.py  views.py
upload_image/: admin.py  models.py  serializer.py  views.py
user/: models.py  serializer.py  tests.py  views.py
(+25 files in other folders)
